Terraform/mysql_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: dev
spec:
  type: NodePort 
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 32002
  selector:
    app: mysql
